SignUp sin estilos

--- a/Elliot/login.html
+++ b/Elliot/login.html
@@ -108,7 +108,7 @@
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">
                                 ¿No tienes una cuenta?
-                                <a href="#!" class="m-3 link-danger">Registrarse</a>
+                                <a href="signup.html" class="m-3 link-danger">Registrarse</a>
                             </p>
                         </div>
                     </form>
