--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="Resources/Images/Grupo 24.png" />
-    <title>Autenticación de Usuario</title>
+    <title>Registrarte en Elliot</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -109,79 +109,74 @@
                         <!-- Password input -->
                         <div class="form-outline mb-3">
                             <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
-                            <label class="form-label" for="password">Contraseña</label>
+                            <label class="form-label" for="confirm-password">Contraseña</label>
+                            <label class="form-label" for="confirm-password">
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                            </label>
                         </div>
 
                         <!-- confirm Password input -->
-                        <div class="form-outline mb-3">
-                            <input type="password" name="confirm-password" id="confirm-password" class="form-control form-control-lg" placeholder="Confirme su Contraseña" />
-                            <label class="form-label" for="confirm-password">Contraseña</label>
+                        <div class="form-outline mb-3 ">
+                            <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
+                            <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-between align-items-center ">
                             <p>Al hacer clic en Registrarte, aceptas las Condiciones, la Política de datos y la Política de cookies. Es posible que te enviemos notificaciones por correo.</p>
                         </div>
 
-                        <div class="text-center text-lg-start mt-4 pt-2">
-                            <button type="button" onclick="loginUser();" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem">
+                        <div class="text-center text-lg-start mt-4 pt-2 ">
+                            <button type="button " onclick="; " class="btn btn-primary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem ">
                                 Registrarse
                             </button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0">
-                                <a href="login.html" class="m-3 link-danger">¿Ya tienes una cuenta?</a>
+                            <p class="small fw-bold mt-2 pt-1 mb-0 ">
+                                <a href="login.html " class="m-3 link-danger ">¿Ya tienes una cuenta?</a>
                             </p>
                         </div>
                     </form>
                 </div>
-                <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/security2.png" class="img-fluid" alt="Sample image" />
+                <div class="col-md-9 col-lg-6 col-xl-5 ">
+                    <img src="Resources/Images/security2.png " class="img-fluid " alt="Sample image " />
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="text-center text-lg-start" style="
-        background-color: #feefe8;
-        min-height: 300px;
-        border-right-color: rgba(0, 0, 0, 0);
-        border-width: 3px;
-        border-top-color: rgb(0, 0, 0);
-        border-style: solid;
-        border-bottom-color: rgba(0, 0, 0, 0);
-        border-left-color: rgba(255, 255, 255, 0);
-      ">
+    <footer class="text-center text-lg-start " style=" background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
+                                border-left-color: rgba(255, 255, 255, 0); ">
         <!-- Grid container -->
-        <div class="container p-2">
+        <div class="container p-2 ">
             <!--Grid row-->
-            <div class="row">
+            <div class="row ">
                 <!--Grid column-->
-                <div class="col-4">
-                    <img src="Resources/Images/Grupo 35.png" width="40%" style="float: right; margin-top: 50px; float: left" /><br /><br /><br /><br /><br /><br />
-                    <ul class="list-unstyled mb-0">
-                        <li><a href="#!" class="">Inicio</a><br /></li>
-                        <li><a href="#!" class="">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#!" class="">Productos</a><br /></li>
-                        <li><a href="#!" class="">Planes</a><br /></li>
+                <div class="col-4 ">
+                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
+                    <ul class="list-unstyled mb-0 ">
+                        <li><a href="#! " class=" ">Inicio</a><br /></li>
+                        <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
+                        <li><a href="#! " class=" ">Productos</a><br /></li>
+                        <li><a href="#! " class=" ">Planes</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
-                <div class="col-8" style="margin-top: 50px">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
+                <div class="col-8 " style="margin-top: 50px ">
+                    <h5 class="text-uppercase mb-0 ">Inoformación de contacto</h5>
                     <br /><br />
 
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled ">
                         <li>
-                            <a href="#!" class="text-dark">Colombia</a>
+                            <a href="#! " class="text-dark ">Colombia</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-dark">Teusaquillo, Bogotá</a>
+                            <a href="#! " class="text-dark ">Teusaquillo, Bogotá</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-dark">3145678934</a>
+                            <a href="#! " class="text-dark ">3145678934</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-dark">2445678</a>
+                            <a href="#! " class="text-dark ">2445678</a>
                         </li>
                     </ul>
                 </div>
@@ -194,11 +189,16 @@
 </body>
 
 <!-- auteticación de Usuario -->
-<script src="jsQuerys/loginUser.js"></script>
+<script src="jsQuerys/loginUser.js "></script>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js "></script>
+<script>
+    function prueba() {
+        alert("Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji. ");
+    }
+</script>
 
 </html>
