--- a/Elliot/login.html
+++ b/Elliot/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="Resources/Images/Grupo 24.png" />
-    <title>Autenticación de Usuario</title>
+    <title>Acceder a Elliot</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -81,13 +81,13 @@
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="text" name="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
-                            <label class="form-label" for="password">Username</label>
+                            <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
+                            <label class="form-label" for="username">Username</label>
                         </div>
 
                         <!-- Password input -->
                         <div class="form-outline mb-3">
-                            <input type="password" name="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
+                            <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
                             <label class="form-label" for="password">Contraseña</label>
                         </div>
 
@@ -99,7 +99,7 @@
                                     Recordar credenciales
                                 </label>
                             </div>
-                            <a href="#!" class="text-body">Olvidé mi contraseña</a>
+                            <a href="recuperarMiCuenta.html" class="text-body">Olvidé mis Credenciales</a>
                         </div>
 
                         <div class="text-center text-lg-start mt-4 pt-2">
