--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -66,52 +66,52 @@
         </span>
     </nav>
 
-    <section class="vh-100">
+    <section class="vh-100" style="margin-bottom: 80px">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                    <form id="formLogin" method="POST">
+                    <form id="formLogin" method="POST" style="margin-top: 80px;">
 
                         <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0">Registrate</p>
+                            <p class="text-center fw-bold mx-3 mb-0">Crea una cuenta en Elliot</p>
                         </div>
 
                         <!-- Nombres y Apellidos input -->
                         <div class="form-outline mb-4">
-                            <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su Nombre" />
+                            <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su(s) nombre(s)" />
                             <label class="form-label" for="nombres">Nombre</label>
                         </div>
 
                         <!-- Apellidos input -->
                         <div class="form-outline mb-4">
-                            <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus Apellidos" />
+                            <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos" />
                             <label class="form-label" for="apellidos">Apellidos</label>
                         </div>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su Email" />
+                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su correo electrónico" />
                             <label class="form-label" for="email">Email</label>
                         </div>
 
                         <!-- confirm Email input -->
                         <div class="form-outline mb-4">
                             <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
-                            <label class="form-label" for="confirm-email">Confirme su Email</label>
+                            <label class="form-label" for="confirm-email">Confirme su correo electrónico</label>
                         </div>
 
                         <!-- Username input -->
                         <div class="form-outline mb-4">
                             <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
-                            <label class="form-label" for="username">Username</label>
+                            <label class="form-label" for="username">Nombre de usuario</label>
                         </div>
 
                         <!-- Password input -->
                         <div class="form-outline mb-3">
                             <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
                             <label class="form-label" for="confirm-password">Contraseña</label>
-                            <label class="form-label" for="confirm-password">
-                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                            <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
+                                Su contraseña debe tener de 8 a 20 caracteres, contener letras y números. No debe contener espacios, caracteres especiales o emojis.
                             </label>
                         </div>
 
@@ -122,7 +122,7 @@
                         </div>
 
                         <div class="d-flex justify-content-between align-items-center ">
-                            <p>Al hacer clic en Registrarte, aceptas las Condiciones, la Política de datos y la Política de cookies. Es posible que te enviemos notificaciones por correo.</p>
+                            <p>Al confirmar el registro, acepta las Condiciones, la Política de datos y la Política de cookies. Es posible que se envíen notificaciones por correo electrónico.</p>
                         </div>
 
                         <div class="text-center text-lg-start mt-4 pt-2 ">
