--- a/Elliot/login.html
+++ b/Elliot/login.html
@@ -70,7 +70,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" />
+                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 50%; margin-top: 100px; margin-left:80px;" />
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form id="formLogin" method="POST">
