--- a/Elliot/recuperarMiCuenta.html
+++ b/Elliot/recuperarMiCuenta.html
@@ -70,14 +70,16 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" />
+                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 50%; margin-top: 100px; margin-left:80px;"/>
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form id="formLogin" method="POST">
 
                         <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0"></p>
+                            <p class="text-center fw-bold mx-3 mb-0">Recuperación de contraseña</p>
                         </div>
+
+                        <p>Al ingresar el correo electrónico con el cual se registró se le enviarán las instrucciones para la recuperación de su cuenta.</p>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
@@ -87,10 +89,10 @@
 
                         <div class="text-center text-lg-start mt-4 pt-2">
                             <button type="button" onclick=";" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem">
-                                Enviar
+                                Enviar información
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">
-                                <a href="login.html" class="m-3 link-danger">¿Ya tienes una cuenta?</a>
+                                <a href="login.html" class="m-3 link-danger">¿Ya tiene una cuenta?</a>
                             </p>
                         </div>
                     </form>
