Corrección de Ortografía

--- a/Elliot/portal-usuario.html
+++ b/Elliot/portal-usuario.html
@@ -9,11 +9,8 @@
     <title>Acceder a Elliot</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/estilo-main.css" />
     <link rel="stylesheet" href="CSS/estilos-login.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand" />
@@ -29,9 +26,7 @@
                 <p class="texto-logo">ELLIOT TECH</p>
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,8 +47,7 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                            id="texto-botones">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
                             Productos
                         </a>
                     </li>
@@ -106,47 +100,42 @@
                 </ul>
             </div>
 
-            <div class="col"
-                style="padding-bottom:10px; padding-top:20px; margin-left: 30px;   margin-top: 50px; margin-bottom: 50px;">
+            <div class="col" style="padding-bottom:10px; padding-top:20px; margin-left: 30px;   margin-top: 50px; margin-bottom: 50px;">
 
                 <h2 style="margin-bottom: 30px; margin-left: 30px;">
                     Dashboard
                 </h2>
                 <p style="margin-bottom: 40px; margin-top: 30px; margin-left: 30px;">
-                    Bienvenido al <b>Portal de usuario de Elliot</b>, desde aquí podrá controlar todos los dispositivos
-                    que tenga asociados, además de adicionar o eliminar los ya existentes.
+                    Bienvenido al <b>Portal de usuario de Elliot</b>, desde aquí podrá controlar todos los dispositivos que tenga asociados, además de adicionar o eliminar los ya existentes.
                 </p>
 
                 <center>
-                <h2 style="margin-bottom: 30px; margin-left: 30px;">
-                    Blog
-                </h2>
-                <div class="card" style="width: 18rem; display: inline-block; margin-left: 30px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Compromiso con la seguridad</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the card's content.</p>
+                    <h2 style="margin-bottom: 30px; margin-left: 30px;">
+                        Blog
+                    </h2>
+                    <div class="card" style="width: 18rem; display: inline-block; margin-left: 30px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Compromiso con la seguridad</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn">Leer más</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="card" style="width: 18rem; display: inline-block; margin-left: 60px; margin-right: 60px;">
-                    <div class="card-body">
-                        <h5 class="card-title">El alza de los CCTV´s en el último año</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the card's content.</p>
+                    <div class="card" style="width: 18rem; display: inline-block; margin-left: 60px; margin-right: 60px;">
+                        <div class="card-body">
+                            <h5 class="card-title">El alza de los CCTV´s en el último año</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn">Leer más</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="card" style="width: 18rem; display: inline-block">
-                    <div class="card-body">
-                        <h5 class="card-title">Criptografía: Pilar de la seguridad</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the card's content.</p>
+                    <div class="card" style="width: 18rem; display: inline-block">
+                        <div class="card-body">
+                            <h5 class="card-title">Criptografía: Pilar de la seguridad</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn">Leer más</a>
+                        </div>
                     </div>
-                </div>
                 </center>
             </div>
         </div>
@@ -170,8 +159,7 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-4">
-                    <img src="Resources/Images/Grupo 35.png" width="40%"
-                        style="float: right; margin-top: 50px; float: left" /><br /><br /><br /><br /><br /><br />
+                    <img src="Resources/Images/Grupo 35.png" width="40%" style="float: right; margin-top: 50px; float: left" /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0">
                         <li><a href="#!" class="">Inicio</a><br /></li>
                         <li><a href="#!" class="">¿Quiénes Somos?</a><br /></li>
@@ -183,7 +171,7 @@
 
                 <!--Grid column-->
                 <div class="col-8" style="margin-top: 50px">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled">
