--- a/Elliot/recuperarMiCuenta.html
+++ b/Elliot/recuperarMiCuenta.html
@@ -70,7 +70,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 50%; margin-top: 100px; margin-left:80px;"/>
+                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 50%; margin-top: 100px; margin-left:80px;" />
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form id="formLogin" method="POST">
@@ -129,7 +129,7 @@
 
                 <!--Grid column-->
                 <div class="col-8" style="margin-top: 50px">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled">
