--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -61,7 +61,7 @@
         </div>
 
         <span class="login">
-            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
+            <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
             <img src="Resources/Images/phone_50px.png" width="30px" />
         </span>
     </nav>
@@ -130,7 +130,7 @@
                                 Registrarse
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0 ">
-                                <a href="login.html " class="m-3 link-danger ">¿Ya tienes una cuenta?</a>
+                                <a href="portal-usuario.php" class="m-3 link-danger ">¿Ya tienes una cuenta?</a>
                             </p>
                         </div>
                     </form>
@@ -194,7 +194,6 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js "></script>
 <script>
     function prueba() {
         alert("Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji. ");
