--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -26,8 +26,8 @@
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item" style="padding-right: 40px; padding-left: 40px;">
@@ -38,8 +38,8 @@
                     </li>
                     <li class="nav-item " style="padding-right: 40px; padding-left: 40px; border-right-color: #F25C5C;border-width: 3px; border-top-color: #315254;border-style: solid;border-bottom-color: #315254;border-left-color: #315254;">
                         <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
-              Productos
-            </a>
+                            Productos
+                        </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px;">
                         <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
@@ -50,9 +50,9 @@
         </div>
 
         <span class="login">
-      <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
-      <img src="Resources/Images/phone_50px.png" width="30px">
-    </span>
+            <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
+            <img src="Resources/Images/phone_50px.png" width="30px">
+        </span>
     </nav>
 
     <!------------->
