--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -76,38 +76,43 @@
                             <p class="text-center fw-bold mx-3 mb-0">Crea una cuenta en Elliot</p>
                         </div>
 
+                        <div class="form-group row">                          
                         <!-- Nombres y Apellidos input -->
-                        <div class="form-outline mb-4">
+                        <div class="col form-outline mb-4">
                             <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su(s) nombre(s)" />
                             <label class="form-label" for="nombres">Nombre</label>
                         </div>
 
                         <!-- Apellidos input -->
-                        <div class="form-outline mb-4">
+                        <div class="col form-outline mb-4">
                             <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos" />
                             <label class="form-label" for="apellidos">Apellidos</label>
                         </div>
+                    </div>
 
+                    <div class="form-group row">  
                         <!-- Email input -->
-                        <div class="form-outline mb-4">
+                        <div class="col form-outline mb-4">
                             <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su correo electrónico" />
                             <label class="form-label" for="email">Email</label>
                         </div>
 
                         <!-- confirm Email input -->
-                        <div class="form-outline mb-4">
+                        <div class="col form-outline mb-4">
                             <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
                             <label class="form-label" for="confirm-email">Confirme su correo electrónico</label>
                         </div>
 
+                        </div>
                         <!-- Username input -->
                         <div class="form-outline mb-4">
                             <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
                             <label class="form-label" for="username">Nombre de usuario</label>
                         </div>
 
+                        <div class="form-group row">
                         <!-- Password input -->
-                        <div class="form-outline mb-3">
+                        <div class="col form-outline mb-3">
                             <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
                             <label class="form-label" for="confirm-password">Contraseña</label>
                             <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
@@ -116,10 +121,11 @@
                         </div>
 
                         <!-- confirm Password input -->
-                        <div class="form-outline mb-3 ">
+                        <div class="col form-outline mb-3 ">
                             <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
                             <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
                         </div>
+                    </div>
 
                         <div class="d-flex justify-content-between align-items-center ">
                             <p>Al confirmar el registro, acepta las Condiciones, la Política de datos y la Política de cookies. Es posible que se envíen notificaciones por correo electrónico.</p>
