--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -76,32 +76,32 @@
                             <p class="text-center fw-bold mx-3 mb-0">Crea una cuenta en Elliot</p>
                         </div>
 
-                        <div class="form-group row">                          
-                        <!-- Nombres y Apellidos input -->
-                        <div class="col form-outline mb-4">
-                            <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su(s) nombre(s)" />
-                            <label class="form-label" for="nombres">Nombre</label>
+                        <div class="form-group row">
+                            <!-- Nombres y Apellidos input -->
+                            <div class="col form-outline mb-4">
+                                <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su(s) nombre(s)" />
+                                <label class="form-label" for="nombres">Nombre</label>
+                            </div>
+
+                            <!-- Apellidos input -->
+                            <div class="col form-outline mb-4">
+                                <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos" />
+                                <label class="form-label" for="apellidos">Apellidos</label>
+                            </div>
                         </div>
 
-                        <!-- Apellidos input -->
-                        <div class="col form-outline mb-4">
-                            <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos" />
-                            <label class="form-label" for="apellidos">Apellidos</label>
-                        </div>
-                    </div>
+                        <div class="form-group row">
+                            <!-- Email input -->
+                            <div class="col form-outline mb-4">
+                                <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su correo electrónico" />
+                                <label class="form-label" for="email">Email</label>
+                            </div>
 
-                    <div class="form-group row">  
-                        <!-- Email input -->
-                        <div class="col form-outline mb-4">
-                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su correo electrónico" />
-                            <label class="form-label" for="email">Email</label>
-                        </div>
-
-                        <!-- confirm Email input -->
-                        <div class="col form-outline mb-4">
-                            <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
-                            <label class="form-label" for="confirm-email">Confirme su correo electrónico</label>
-                        </div>
+                            <!-- confirm Email input -->
+                            <div class="col form-outline mb-4">
+                                <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
+                                <label class="form-label" for="confirm-email">Confirme su correo electrónico</label>
+                            </div>
 
                         </div>
                         <!-- Username input -->
@@ -111,21 +111,21 @@
                         </div>
 
                         <div class="form-group row">
-                        <!-- Password input -->
-                        <div class="col form-outline mb-3">
-                            <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
-                            <label class="form-label" for="confirm-password">Contraseña</label>
-                            <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
+                            <!-- Password input -->
+                            <div class="col form-outline mb-3">
+                                <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
+                                <label class="form-label" for="confirm-password">Contraseña</label>
+                                <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
                                 Su contraseña debe tener de 8 a 20 caracteres, contener letras y números. No debe contener espacios, caracteres especiales o emojis.
                             </label>
-                        </div>
+                            </div>
 
-                        <!-- confirm Password input -->
-                        <div class="col form-outline mb-3 ">
-                            <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
-                            <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
+                            <!-- confirm Password input -->
+                            <div class="col form-outline mb-3 ">
+                                <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
+                                <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
+                            </div>
                         </div>
-                    </div>
 
                         <div class="d-flex justify-content-between align-items-center ">
                             <p>Al confirmar el registro, acepta las Condiciones, la Política de datos y la Política de cookies. Es posible que se envíen notificaciones por correo electrónico.</p>
@@ -136,7 +136,7 @@
                                 Registrarse
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0 ">
-                                <a href="portal-usuario.php" class="m-3 link-danger ">¿Ya tienes una cuenta?</a>
+                                <a href="portal-usuario.php" class="m-3 link-danger">¿Ya tienes una cuenta?</a>
                             </p>
                         </div>
                     </form>
@@ -148,7 +148,7 @@
         </div>
     </section>
 
-    <footer class="text-center text-lg-start " style=" background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
+    <footer class="text-center text-lg-start " style="background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
                                 border-left-color: rgba(255, 255, 255, 0); ">
         <!-- Grid container -->
         <div class="container p-2 ">
@@ -158,10 +158,10 @@
                 <div class="col-4 ">
                     <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
-                        <li><a href="#! " class=" ">Inicio</a><br /></li>
-                        <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#! " class=" ">Productos</a><br /></li>
-                        <li><a href="#! " class=" ">Planes</a><br /></li>
+                        <li><a href="inicio.html" class=" ">Inicio</a><br /></li>
+                        <li><a href="#!" class=" ">¿Quiénes Somos?</a><br /></li>
+                        <li><a href="#!" class=" ">Productos</a><br /></li>
+                        <li><a href="#!" class=" ">Planes</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
