--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -70,7 +70,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                    <form id="formLogin" method="POST" style="margin-top: 80px;">
+                    <form class="" id="formLogin" method="POST" style="margin-top: 80px;" novalidate>
 
                         <div class="divider d-flex align-items-center my-4">
                             <p class="text-center fw-bold mx-3 mb-0">Crea una cuenta en Elliot</p>
@@ -78,70 +78,66 @@
 
                         <div class="form-group row">
                             <!-- Nombres y Apellidos input -->
-                            <div class="col form-outline mb-4">
-                                <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su(s) nombre(s)" />
+                            <div class="col form-outline mb-2">
+                                <input required type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Nombre(s)" />
                                 <label class="form-label" for="nombres">Nombre</label>
+                                <div class="valid-tooltip">
+                                    Looks good!
+                                </div>
                             </div>
 
                             <!-- Apellidos input -->
-                            <div class="col form-outline mb-4">
-                                <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos" />
+                            <div class="col form-outline mb-2">
+                                <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Apellidos" />
                                 <label class="form-label" for="apellidos">Apellidos</label>
                             </div>
                         </div>
 
-                        <div class="form-group row">
-                            <!-- Email input -->
-                            <div class="col form-outline mb-4">
-                                <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su correo electrónico" />
-                                <label class="form-label" for="email">Email</label>
-                            </div>
-
-                            <!-- confirm Email input -->
-                            <div class="col form-outline mb-4">
-                                <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
-                                <label class="form-label" for="confirm-email">Confirme su correo electrónico</label>
-                            </div>
-
+                        <!-- Email input -->
+                        <div class="col form-outline mb-2">
+                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Correo electrónico" />
+                            <label class="form-label" for="email">Email</label>
                         </div>
+
                         <!-- Username input -->
-                        <div class="form-outline mb-4">
-                            <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
+                        <div class="form-outline mb-2">
+                            <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Usuario" />
                             <label class="form-label" for="username">Nombre de usuario</label>
                         </div>
 
-                        <div class="form-group row">
+                        <div class="form-group row mb-2">
                             <!-- Password input -->
-                            <div class="col form-outline mb-3">
-                                <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
+                            <div class="col form-outline">
+                                <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Contraseña" />
                                 <label class="form-label" for="confirm-password">Contraseña</label>
-                                <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
-                                Su contraseña debe tener de 8 a 20 caracteres, contener letras y números. No debe contener espacios, caracteres especiales o emojis.
-                            </label>
                             </div>
 
                             <!-- confirm Password input -->
-                            <div class="col form-outline mb-3 ">
+                            <div class="col form-outline">
                                 <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
                                 <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
                             </div>
+
+                            <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
+                                Su contraseña debe tener de 8 a 20 caracteres, contener letras y números. No debe contener espacios, caracteres especiales o emojis.
+                            </label>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center ">
+                        <div class="d-flex justify-content-between align-items-center mt-2">
                             <p>Al confirmar el registro, acepta las Condiciones, la Política de datos y la Política de cookies. Es posible que se envíen notificaciones por correo electrónico.</p>
                         </div>
 
-                        <div class="text-center text-lg-start mt-4 pt-2 ">
-                            <button type="button " onclick="; " class="btn btn-primary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem ">
+                        <div class="text-center text-lg-start">
+                            <button type="button" onclick="" class="btn btn-primary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem">
                                 Registrarse
                             </button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0 ">
-                                <a href="portal-usuario.php" class="m-3 link-danger">¿Ya tienes una cuenta?</a>
+                            <p class="small fw-bold mt-1 pt-1 ms-3">
+                                <a href="portal-usuario.php" class="link-danger">¿Ya tienes una cuenta?</a>
                             </p>
                         </div>
                     </form>
                 </div>
-                <div class="col-md-9 col-lg-6 col-xl-5 ">
+                <div class="col-md-9 col-lg-6 col-xl-5">
                     <img src="Resources/Images/security2.png " class="img-fluid " alt="Sample image " />
                 </div>
             </div>
