--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -26,23 +26,23 @@
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item" style="padding-right: 40px; padding-left: 40px;">
                         <a class="nav-link active" aria-current="page" href="inicio.html" id="texto-botones">Inicio</a>
                     </li>
                     <li class="nav-item" id="nav-item-linea" style="padding-left: 40px;">
-                        <a class="nav-link" href="#" id="texto-botones">¿Quiénes somos?</a>
+                        <a class="nav-link" href="quienes-somos.html" id="texto-botones">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item " style="padding-right: 40px; padding-left: 40px; border-right-color: #F25C5C;border-width: 3px; border-top-color: #315254;border-style: solid;border-bottom-color: #315254;border-left-color: #315254;">
-                        <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
-                            Productos
-                        </a>
+                        <a class="nav-link " href="productos.html" id="texto-botones">
+              Productos
+            </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px;">
-                        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
+                        <a class="nav-link " href="planes.html" id="texto-botones">Planes</a>
                     </li>
                 </ul>
 
@@ -50,9 +50,10 @@
         </div>
 
         <span class="login">
-            <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
-            <img src="Resources/Images/phone_50px.png" width="30px">
-        </span>
+      <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
+      <a href="contacto.html">        
+        <img src="Resources/Images/phone_50px.png" width="30px" /></a>
+    </span>
     </nav>
 
     <!------------->
@@ -262,41 +263,48 @@
     <!------------------->
 
 
-    <footer class="text-center text-lg-start " style="background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
-                                border-left-color: rgba(255, 255, 255, 0); ">
+    <footer class=" text-center text-lg-start" style="background-color: #FEEFE8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0);border-width: 3px; border-top-color: rgb(0, 0, 0);border-style: solid;border-bottom-color: rgba(0, 0, 0, 0);border-left-color: rgba(255, 255, 255, 0);">
         <!-- Grid container -->
-        <div class="container p-2 ">
+        <div class="container p-2">
             <!--Grid row-->
-            <div class="row ">
+            <div class="row">
                 <!--Grid column-->
-                <div class="col-4 ">
-                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
-                    <ul class="list-unstyled mb-0 ">
-                        <li><a href="inicio.html" class=" ">Inicio</a><br /></li>
-                        <li><a href="#!" class=" ">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#!" class=" ">Productos</a><br /></li>
-                        <li><a href="#!" class=" ">Planes</a><br /></li>
+                <div class="col-4">
+                    <img src="Resources/Images/Grupo 35.png" width="40%" style="float:right; margin-top:50px; float:left;"><br><br><br><br><br><br>
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="">Inicio</a><br>
+                        </li>
+                        <li>
+                            <a href="#!" class="">¿Quiénes Somos?</a><br>
+                        </li>
+                        <li>
+                            <a href="#!" class="">Productos</a><br>
+                        </li>
+                        <li>
+                            <a href="#!" class="">Planes</a><br>
+                        </li>
+
                     </ul>
                 </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
-                <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
-                    <br /><br />
+                <div class="col-8" style="margin-top:50px; ">
+                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5><br><br>
 
-                    <ul class="list-unstyled ">
+                    <ul class="list-unstyled">
                         <li>
-                            <a href="#! " class="text-dark ">Colombia</a>
+                            <a href="#!" class="text-dark">Colombia</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">Teusaquillo, Bogotá</a>
+                            <a href="#!" class="text-dark">Teusaquillo, Bogotá</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">3145678934</a>
+                            <a href="#!" class="text-dark">3145678934</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">2445678</a>
+                            <a href="#!" class="text-dark">2445678</a>
                         </li>
                     </ul>
                 </div>
@@ -305,6 +313,8 @@
             <!--Grid row-->
         </div>
         <!-- Grid container -->
+
+
     </footer>
 
 
