--- a/Elliot/recuperarMiCuenta.html
+++ b/Elliot/recuperarMiCuenta.html
@@ -36,7 +36,7 @@
               >
             </li>
             <li class="nav-item" id="nav-item-linea" style="padding-left: 40px">
-              <a class="nav-link" href="#" id="texto-botones"
+              <a class="nav-link" href="quienes-somos.html" id="texto-botones"
                 >¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item" style="
@@ -49,20 +49,21 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
+                        <a class="nav-link" href="productos.html" id="texto-botones">
                             Productos
                         </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
         </div>
 
         <span class="login">
-            <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
-            <img src="Resources/Images/phone_50px.png" width="30px" />
+            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
+            <a href="contacto.html">        
+                <img src="Resources/Images/phone_50px.png" width="30px" /></a>
         </span>
     </nav>
 
@@ -70,16 +71,14 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 50%; margin-top: 100px; margin-left:80px;" />
+                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" />
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form id="formLogin" method="POST">
 
                         <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0">Recuperación de contraseña</p>
+                            <p class="text-center fw-bold mx-3 mb-0"></p>
                         </div>
-
-                        <p>Al ingresar el correo electrónico con el cual se registró se le enviarán las instrucciones para la recuperación de su cuenta.</p>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
@@ -89,10 +88,10 @@
 
                         <div class="text-center text-lg-start mt-4 pt-2">
                             <button type="button" onclick=";" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem">
-                                Enviar información
+                                Enviar
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">
-                                <a href="login.html" class="m-3 link-danger">¿Ya tiene una cuenta?</a>
+                                <a href="login.html" class="m-3 link-danger">¿Ya tienes una cuenta?</a>
                             </p>
                         </div>
                     </form>
@@ -101,41 +100,49 @@
         </div>
     </section>
 
-    <footer class="text-center text-lg-start " style="background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
-                                border-left-color: rgba(255, 255, 255, 0); ">
+    <footer class="text-center text-lg-start" style="
+        background-color: #feefe8;
+        min-height: 300px;
+        border-right-color: rgba(0, 0, 0, 0);
+        border-width: 3px;
+        border-top-color: rgb(0, 0, 0);
+        border-style: solid;
+        border-bottom-color: rgba(0, 0, 0, 0);
+        border-left-color: rgba(255, 255, 255, 0);
+      ">
         <!-- Grid container -->
-        <div class="container p-2 ">
+        <div class="container p-2">
             <!--Grid row-->
-            <div class="row ">
+            <div class="row">
                 <!--Grid column-->
-                <div class="col-4 ">
-                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
-                    <ul class="list-unstyled mb-0 ">
-                        <li><a href="inicio.html" class=" ">Inicio</a><br /></li>
-                        <li><a href="#!" class=" ">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#!" class=" ">Productos</a><br /></li>
-                        <li><a href="#!" class=" ">Planes</a><br /></li>
+                <div class="col-4">
+                    <img src="Resources/Images/Grupo 35.png" width="40%" style="float: right; margin-top: 50px; float: left" /><br /><br /><br /><br /><br /><br />
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#!" class="">Inicio</a><br /></li>
+                        <li><a href="#!" class="">¿Quiénes Somos?</a><br /></li>
+                        <li><a href="#!" class="">Productos</a><br /></li>
+                        <li><a href="#!" class="">Planes</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
-                <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
+                <div class="col-8" style="margin-top: 50px">
+                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
                     <br /><br />
 
-                    <ul class="list-unstyled ">
+                    <ul class="list-unstyled">
                         <li>
-                            <a href="#! " class="text-dark ">Colombia</a>
+                            <a href="#!" class="text-dark">Colombia</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">Teusaquillo, Bogotá</a>
+                            <a href="#!" class="text-dark">Teusaquillo, Bogotá</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">3145678934</a>
+                            <a href="#!" class="text-dark">3145678934</a>
                         </li>
                         <li>
-                            <a href="#! " class="text-dark ">2445678</a>
+                            <a href="#!" class="text-dark">2445678</a>
                         </li>
                     </ul>
                 </div>
