--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/estilo-main.css" />
     <link rel="stylesheet" href="CSS/estilos-login.css" />
+    <link rel="stylesheet" href="CSS/estilos-signup.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -36,7 +37,7 @@
               >
             </li>
             <li class="nav-item" id="nav-item-linea" style="padding-left: 40px">
-              <a class="nav-link" href="#" id="texto-botones"
+              <a class="nav-link" href="quienes-somos.html" id="texto-botones"
                 >¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item" style="
@@ -49,102 +50,101 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
+                        <a class="nav-link" href="productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
                             Productos
                         </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
         </div>
 
         <span class="login">
-            <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
-            <img src="Resources/Images/phone_50px.png" width="30px" />
+            <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px"/></a>
+            <a href="contacto.html">        
+                <img src="Resources/Images/phone_50px.png" width="30px" /></a>
         </span>
     </nav>
 
-    <section class="vh-100" style="margin-bottom: 80px">
+    <section class="" id="form">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                    <form class="" id="formLogin" method="POST" style="margin-top: 80px;" novalidate>
+                    <form id="formLogin" method="POST">
 
                         <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0">Crea una cuenta en Elliot</p>
+                            <p class="text-center fw-bold mx-3 mb-0">Registrate</p>
                         </div>
 
-                        <div class="form-group row">
-                            <!-- Nombres y Apellidos input -->
-                            <div class="col form-outline mb-2">
-                                <input required type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Nombre(s)" />
-                                <label class="form-label" for="nombres">Nombre</label>
-                                <div class="valid-tooltip">
-                                    Looks good!
-                                </div>
-                            </div>
+                        <!-- Nombres y Apellidos input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" name="nombres" id="nombres" class="form-control form-control-lg" placeholder="Ingrese su Nombre" />
+                            <label class="form-label" for="nombres">Nombre</label>
+                        </div>
 
-                            <!-- Apellidos input -->
-                            <div class="col form-outline mb-2">
-                                <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Apellidos" />
-                                <label class="form-label" for="apellidos">Apellidos</label>
-                            </div>
+                        <!-- Apellidos input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" name="apellidos" id="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus Apellidos" />
+                            <label class="form-label" for="apellidos">Apellidos</label>
                         </div>
 
                         <!-- Email input -->
-                        <div class="col form-outline mb-2">
-                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Correo electrónico" />
+                        <div class="form-outline mb-4">
+                            <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Ingrese su Email" />
                             <label class="form-label" for="email">Email</label>
                         </div>
 
-                        <!-- Username input -->
-                        <div class="form-outline mb-2">
-                            <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Usuario" />
-                            <label class="form-label" for="username">Nombre de usuario</label>
+                        <!-- confirm Email input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
+                            <label class="form-label" for="confirm-email">Confirme su Email</label>
                         </div>
 
-                        <div class="form-group row mb-2">
-                            <!-- Password input -->
-                            <div class="col form-outline">
-                                <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Contraseña" />
-                                <label class="form-label" for="confirm-password">Contraseña</label>
-                            </div>
+                        <!-- Username input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
+                            <label class="form-label" for="username">Username</label>
+                        </div>
 
-                            <!-- confirm Password input -->
-                            <div class="col form-outline">
-                                <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
-                                <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
-                            </div>
-
-                            <label class="form-label" for="confirm-password" style="font-size: 14px; color: #54313186">
-                                Su contraseña debe tener de 8 a 20 caracteres, contener letras y números. No debe contener espacios, caracteres especiales o emojis.
+                        <!-- Password input -->
+                        <div class="form-outline mb-3">
+                            <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
+                            <label class="form-label" for="confirm-password">Contraseña</label>
+                            <label class="form-label" for="confirm-password">
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                             </label>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <p>Al confirmar el registro, acepta las Condiciones, la Política de datos y la Política de cookies. Es posible que se envíen notificaciones por correo electrónico.</p>
+                        <!-- confirm Password input -->
+                        <div class="form-outline mb-3 ">
+                            <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
+                            <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
                         </div>
 
-                        <div class="text-center text-lg-start">
-                            <button type="button" onclick="" class="btn btn-primary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem">
+                        <div class="d-flex justify-content-between align-items-center ">
+                            <p>Al hacer clic en Registrarte, aceptas las Condiciones, la Política de datos y la Política de cookies. Es posible que te enviemos notificaciones por correo.</p>
+                        </div>
+
+                        <div class="text-center text-lg-start mt-4 pt-2 ">
+                            <button type="button " onclick="; " class="btn btn-primary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem ">
                                 Registrarse
                             </button>
-                            <p class="small fw-bold mt-1 pt-1 ms-3">
-                                <a href="portal-usuario.php" class="link-danger">¿Ya tienes una cuenta?</a>
+                            <p class="small fw-bold mt-2 pt-1 mb-0 ">
+                                <a href="login.html " class="m-3 link-danger ">¿Ya tienes una cuenta?</a><br><br>
                             </p>
                         </div>
                     </form>
                 </div>
-                <div class="col-md-9 col-lg-6 col-xl-5">
+                <div class="col-md-9 col-lg-6 col-xl-5 ">
                     <img src="Resources/Images/security2.png " class="img-fluid " alt="Sample image " />
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="text-center text-lg-start " style="background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
+    <footer class="text-center text-lg-start " style=" background-color: #feefe8; min-height: 300px; border-right-color: rgba(0, 0, 0, 0); border-width: 3px; border-top-color: rgb(0, 0, 0); border-style: solid; border-bottom-color: rgba(0, 0, 0, 0);
                                 border-left-color: rgba(255, 255, 255, 0); ">
         <!-- Grid container -->
         <div class="container p-2 ">
@@ -154,17 +154,17 @@
                 <div class="col-4 ">
                     <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
-                        <li><a href="inicio.html" class=" ">Inicio</a><br /></li>
-                        <li><a href="#!" class=" ">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#!" class=" ">Productos</a><br /></li>
-                        <li><a href="#!" class=" ">Planes</a><br /></li>
+                        <li><a href="#! " class=" ">Inicio</a><br /></li>
+                        <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
+                        <li><a href="#! " class=" ">Productos</a><br /></li>
+                        <li><a href="#! " class=" ">Planes</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
                 <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
+                    <h5 class="text-uppercase mb-0 ">Inoformación de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled ">
@@ -196,6 +196,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js "></script>
 <script>
     function prueba() {
         alert("Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji. ");
